# storify

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamlfmt  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/services/minio/: action.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml  test_behavior.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  storage.rs  utils.rs
src/storage/: constants.rs
src/storage/operations/: cat.rs  copy.rs  delete.rs  download.rs  list.rs  mkdir.rs  mod.rs  mv.rs  stat.rs  upload.rs  usage.rs
src/storage/utils/: error.rs  mod.rs  path.rs  progress.rs  size.rs
tests/behavior/: main.rs  utils.rs
tests/behavior/operations/: cat.rs  copy.rs  delete.rs  download.rs  list.rs  mkdir.rs  mod.rs  mv.rs  stat.rs  upload.rs  usage.rs
tests/data/: small.txt
tests/data/special_dir !@#$%^&()_+-=;'/: file_in_special_dir.txt
