[package]
name = "storify"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "A unified command-line tool for managing object storage with HDFS-like interface"
repository = "https://github.com/QuakeWang/storify"
authors = ["WangErxi"]

[features]
# Enable common providers by default; HDFS requires JVM/Hadoop native libs at runtime
default = ["oss", "s3", "cos", "fs"]
oss = ["opendal/services-oss"]
s3 = ["opendal/services-s3"]
cos = ["opendal/services-cos"]
fs = ["opendal/services-fs"]
hdfs = ["opendal/services-hdfs"]

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.5.47", features = ["derive", "env"] }
futures = "0.3.30"
log = "0.4.28"
opendal = { version = "0.54.0" }
snafu = "0.8.9"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"

[dev-dependencies]
assert_cmd = "2.0.17"
libtest-mimic = "0.8.1"
predicates = "3.1.3"
rand = "0.9.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "tracing-log"] }
uuid = { version = "1.18.1", features = ["v4"] }

[[test]]
harness = false
name = "behavior"
path = "tests/behavior/main.rs"
